kservice-yaml/endpoints.yaml
---
apiVersion: v1
kind: Endpoints
metadata:
  annotations:
    autoscaling.knative.dev/class: kpa.autoscaling.knative.dev
    serving.knative.dev/creator: kubernetes-admin
  creationTimestamp: "2022-10-29T08:44:18Z"
  labels:
    app: hello-world-00001
    networking.internal.knative.dev/serverlessservice: hello-world-00001
    networking.internal.knative.dev/serviceType: Public
    serving.knative.dev/configuration: hello-world
    serving.knative.dev/configurationGeneration: "1"
    serving.knative.dev/configurationUID: da410292-d82b-4853-9f5e-f068c9a4a736
    serving.knative.dev/revision: hello-world-00001
    serving.knative.dev/revisionUID: 3b2cd2dc-42d7-4a62-9f58-50d704353013
    serving.knative.dev/service: hello-world
    serving.knative.dev/serviceUID: 9b8d4b55-a822-48f1-a29a-5e83bd3c79ea
  name: hello-world-00001
  namespace: demo
  ownerReferences:
    - apiVersion: networking.internal.knative.dev/v1alpha1
      blockOwnerDeletion: true
      controller: true
      kind: ServerlessService
      name: hello-world-00001
      uid: 239055fd-4872-49f1-9d16-8344a3f14609
  resourceVersion: "4172133"
  uid: 27fb8603-8b5a-40fc-b481-d72a1f1cb6cd
subsets:
  - addresses:
      - ip: 10.0.2.54
        nodeName: worker-2
        targetRef:
          kind: Pod
          name: activator-7c9c776fc9-kf9qv
          namespace: knative-serving
          uid: d9880854-60ba-48bb-9d60-e3e9335263ef
    ports:
      - name: http
        port: 8012
        protocol: TCP
      - name: https
        port: 8112
        protocol: TCP
---
apiVersion: v1
kind: Endpoints
metadata:
  annotations:
    endpoints.kubernetes.io/last-change-trigger-time: "2022-10-29T08:44:19Z"
  creationTimestamp: "2022-10-29T08:44:18Z"
  labels:
    app: hello-world-00001
    networking.internal.knative.dev/serverlessservice: hello-world-00001
    networking.internal.knative.dev/serviceType: Private
    serving.knative.dev/configuration: hello-world
    serving.knative.dev/configurationGeneration: "1"
    serving.knative.dev/configurationUID: da410292-d82b-4853-9f5e-f068c9a4a736
    serving.knative.dev/revision: hello-world-00001
    serving.knative.dev/revisionUID: 3b2cd2dc-42d7-4a62-9f58-50d704353013
    serving.knative.dev/service: hello-world
    serving.knative.dev/serviceUID: 9b8d4b55-a822-48f1-a29a-5e83bd3c79ea
  name: hello-world-00001-private
  namespace: demo
  resourceVersion: "4172162"
  uid: a318e495-2e16-480a-9370-6540242d2126
subsets:
  - addresses:
      - ip: 10.0.1.94
        nodeName: worker-1
        targetRef:
          kind: Pod
          name: hello-world-00001-deployment-677867df7f-swt6j
          namespace: demo
          uid: 20841fdc-8b5e-4df2-93c8-6dcdad08e98d
    ports:
      - name: http-usermetric
        port: 9091
        protocol: TCP
      - name: http
        port: 8012
        protocol: TCP
      - name: http-queueadm
        port: 8022
        protocol: TCP
      - name: http-istio
        port: 8012
        protocol: TCP
      - name: https
        port: 8112
        protocol: TCP
      - name: http-autometric
        port: 9090
        protocol: TCP
