kservice-yaml/endpointslice.yaml
addressType: IPv4
apiVersion: discovery.k8s.io/v1
endpoints:
  - addresses:
      - 10.0.2.54
    conditions:
      ready: true
    nodeName: worker-2
    targetRef:
      kind: Pod
      name: activator-7c9c776fc9-kf9qv
      namespace: knative-serving
      uid: d9880854-60ba-48bb-9d60-e3e9335263ef
kind: EndpointSlice
metadata:
  annotations:
    autoscaling.knative.dev/class: kpa.autoscaling.knative.dev
    serving.knative.dev/creator: kubernetes-admin
  creationTimestamp: "2022-10-29T08:44:18Z"
  generateName: hello-world-00001-
  generation: 1
  labels:
    app: hello-world-00001
    endpointslice.kubernetes.io/managed-by: endpointslicemirroring-controller.k8s.io
    kubernetes.io/service-name: hello-world-00001
    networking.internal.knative.dev/serverlessservice: hello-world-00001
    networking.internal.knative.dev/serviceType: Public
    serving.knative.dev/configuration: hello-world
    serving.knative.dev/configurationGeneration: "1"
    serving.knative.dev/configurationUID: da410292-d82b-4853-9f5e-f068c9a4a736
    serving.knative.dev/revision: hello-world-00001
    serving.knative.dev/revisionUID: 3b2cd2dc-42d7-4a62-9f58-50d704353013
    serving.knative.dev/service: hello-world
    serving.knative.dev/serviceUID: 9b8d4b55-a822-48f1-a29a-5e83bd3c79ea
  name: hello-world-00001-7g8cf
  namespace: demo
  ownerReferences:
    - apiVersion: v1
      blockOwnerDeletion: true
      controller: true
      kind: Endpoints
      name: hello-world-00001
      uid: 27fb8603-8b5a-40fc-b481-d72a1f1cb6cd
  resourceVersion: "4172134"
  uid: ae9f4cd1-0d14-42e6-bb45-c8ae98ec02e3
ports:
  - name: https
    port: 8112
    protocol: TCP
  - name: http
    port: 8012
    protocol: TCP
---
addressType: IPv4
apiVersion: discovery.k8s.io/v1
endpoints:
  - addresses:
      - 10.0.1.94
    conditions:
      ready: true
      serving: true
      terminating: false
    nodeName: worker-1
    targetRef:
      kind: Pod
      name: hello-world-00001-deployment-677867df7f-swt6j
      namespace: demo
      uid: 20841fdc-8b5e-4df2-93c8-6dcdad08e98d
kind: EndpointSlice
metadata:
  annotations:
    endpoints.kubernetes.io/last-change-trigger-time: "2022-10-29T08:44:19Z"
  creationTimestamp: "2022-10-29T08:44:18Z"
  generateName: hello-world-00001-private-
  generation: 3
  labels:
    app: hello-world-00001
    endpointslice.kubernetes.io/managed-by: endpointslice-controller.k8s.io
    kubernetes.io/service-name: hello-world-00001-private
    networking.internal.knative.dev/serverlessservice: hello-world-00001
    networking.internal.knative.dev/serviceType: Private
    serving.knative.dev/configuration: hello-world
    serving.knative.dev/configurationGeneration: "1"
    serving.knative.dev/configurationUID: da410292-d82b-4853-9f5e-f068c9a4a736
    serving.knative.dev/revision: hello-world-00001
    serving.knative.dev/revisionUID: 3b2cd2dc-42d7-4a62-9f58-50d704353013
    serving.knative.dev/service: hello-world
    serving.knative.dev/serviceUID: 9b8d4b55-a822-48f1-a29a-5e83bd3c79ea
  name: hello-world-00001-private-lrp8b
  namespace: demo
  ownerReferences:
    - apiVersion: v1
      blockOwnerDeletion: true
      controller: true
      kind: Service
      name: hello-world-00001-private
      uid: d74894c4-56c8-4a8e-b443-d4fb29c71cd8
  resourceVersion: "4172161"
  uid: b6d8ca6a-5284-4931-8b76-723bc83d647e
ports:
  - name: http-istio
    port: 8012
    protocol: TCP
  - name: http-queueadm
    port: 8022
    protocol: TCP
  - name: https
    port: 8112
    protocol: TCP
  - name: http-autometric
    port: 9090
    protocol: TCP
  - name: http-usermetric
    port: 9091
    protocol: TCP
  - name: http
    port: 8012
    protocol: TCP
