kservice-yaml/kservice.yaml
apiVersion: serving.knative.dev/v1
kind: Service
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"serving.knative.dev/v1","kind":"Service","metadata":{"annotations":{},"name":"hello-world","namespace":"demo"},"spec":{"template":{"spec":{"containers":[{"env":[{"name":"TARGET","value":"World"}],"image":"gcr.io/knative-samples/helloworld-go","ports":[{"containerPort":8080}]}]}}}}
    serving.knative.dev/creator: kubernetes-admin
    serving.knative.dev/lastModifier: kubernetes-admin
  creationTimestamp: "2022-10-29T08:44:17Z"
  generation: 1
  name: hello-world
  namespace: demo
  resourceVersion: "4172195"
  uid: 9b8d4b55-a822-48f1-a29a-5e83bd3c79ea
spec:
  template:
    metadata:
      creationTimestamp: null
    spec:
      containerConcurrency: 0
      containers:
        - env:
            - name: TARGET
              value: World
          image: gcr.io/knative-samples/helloworld-go
          name: user-container
          ports:
            - containerPort: 8080
              protocol: TCP
          readinessProbe:
            successThreshold: 1
            tcpSocket:
              port: 0
          resources: {}
      enableServiceLinks: false
      timeoutSeconds: 300
  traffic:
    - latestRevision: true
      percent: 100
status:
  address:
    url: http://hello-world.demo.svc.cluster.local
  conditions:
    - lastTransitionTime: "2022-10-29T08:44:19Z"
      status: "True"
      type: ConfigurationsReady
    - lastTransitionTime: "2022-10-29T08:44:19Z"
      status: "True"
      type: Ready
    - lastTransitionTime: "2022-10-29T08:44:19Z"
      status: "True"
      type: RoutesReady
  latestCreatedRevisionName: hello-world-00001
  latestReadyRevisionName: hello-world-00001
  observedGeneration: 1
  traffic:
    - latestRevision: true
      percent: 100
      revisionName: hello-world-00001
  url: http://hello-world.demo.svc.cluster.local
